--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@
 title: My Website
 
 # Your name to show in the footer
-author: Some Person
+author: Harrison Owens
 
 ###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
+  About Me: "I like playing video games and reading books"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
